@@ -20,6 +20,11 @@ description = "libcommon/Prometheus"
 
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
+    jvmArgs = listOf(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off",
+        classpath.find { "mockito-core" in it.name }?.let { "-javaagent:${it.absolutePath}" } ?: "",
+    )
 }
 
 publishing {
