@@ -30,6 +30,11 @@ description = "libcommon/R2DBC Kotlin"
 tasks.test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+    jvmArgs = listOf(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off",
+        classpath.find { "mockito-core" in it.name }?.let { "-javaagent:${it.absolutePath}" } ?: "",
+    )
 }
 
 publishing {
